@@ -13,6 +13,8 @@ linux (3.10.1-2) UNRELEASED; urgency=low
   * [armhf/armmp] Enable NET_CALXEDA_XGMAC as module (Closes: #717269)
   * linux-source: Switch compression of tarball and patch to xz.  Disable
     compression of package (but use gzip, to keep old tools happy).
+  * linux-source: Install kernel config files for linux-image packages in
+    /usr/src/linux-config-$UPSTREAMVERSION directory
 
  -- Arnaud Patard <arnaud.patard@rtp-net.org>  Tue, 16 Jul 2013 08:19:29 +0200
 
